ha-nginx-ingress/nginx-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-nginx-deployment
  namespace: nginx-ingress
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: example-nginx-app
  namespace: nginx-ingress
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
