ha-nginx-ingress/nginx-app/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eample-app-ingress
  namespace: nginx-ingress
spec:
  ingressClassName: nginx-ingress
  rules:
    - host: example-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-nginx-app
                port:
                  number: 80
